--- a/Main Proposal.ipynb
+++ b/Main Proposal.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "2458d46c-b286-4cf4-8a72-5e2a507779a1",
    "metadata": {},
    "outputs": [
@@ -375,8 +375,8 @@
     }
    ],
    "source": [
-    "url_file <- \"https://raw.githubusercontent.com/joycecoww/dsci100-proj-group62/main/abalone.csv?token=GHSAT0AAAAAACDJUG7ETHNXZGLIYRHD7Q32ZECJ25Q\"\n",
-    "abalone <- read_csv(url(url_file))\n",
+    "#url_file <- \"https://raw.githubusercontent.com/joycecoww/dsci100-proj-group62/main/abalone.csv?token=GHSAT0AAAAAACDJUG7ETHNXZGLIYRHD7Q32ZECJ25Q\"\n",
+    "abalone <- read_csv(file = \"abalone.csv\")\n",
     "abalone"
    ]
   },
