added main proposal text

--- a/Main Proposal.ipynb
+++ b/Main Proposal.ipynb
@@ -1,9 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bf7f8221-d4e0-46c4-8456-72bd9d6dca6f",
+   "metadata": {},
+   "source": [
+    "**How Old is this Abalone?: Predicting the Age of Abalone Based on Physical Measurements**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1428f2b2-4cd3-4f8b-9717-8efa906d7574",
+   "metadata": {},
+   "source": [
+    "**Introduction**\n",
+    "\n",
+    "Abalone is a type of marine snail that is highly cherished for its meat and shells. Its meat is a delicacy that is among one of the most expensive seafood in the world, while its shells are best used for jewelry and decorative objects. Determining the age of abalone is crucial for sustainable harvesting and our project aims to analyze a dataset on abalone characteristics to develop a predictive model for estimating their age. By identifying key characteristics that correlate with age, we can contribute helpful information to resource management and also broaden our knowledge of abalone population dynamics. The question we will be attempting to answer is, \"can we accurately predict the age of abalone based on their physical features\"? The dataset used for this project contains numerous physical measurements such as their length, diameter, and number of rings. It contains 9 different features (columns) and 4,177 instances (rows) of data about various abalones. The age of the abalone is determined by the rings formed inside its inner shell. However, since some rings are hard to see even under a microscope, adding 1.5 to its ring counts is traditionally accepted when measuring the age, our target variable. This dataset offers a valuable resource for evaluating the relationship between abalone characteristics and their age."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46912bfd-0cbc-4bc4-803b-be9039df2f33",
+   "metadata": {},
+   "source": [
+    "**Preliminary Data Analysis**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "094cd000-e566-4605-9cab-712029134258",
+   "id": "e1beb716-983d-4d93-9dc3-bdf4afa97fa6",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +63,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
+      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
       "\n"
      ]
     }
@@ -389,7 +415,7 @@
     }
    ],
    "source": [
-    "set.seed(2000)\n",
+    "set.seed(2000) #don't know if this is the right seed or if we even need one?\n",
     "abalone_split <- initial_split(abalone, prop = 0.75, strata = Age)  \n",
     "abalone_train <- training(abalone_split)   \n",
     "abalone_test <- testing(abalone_split)\n",
@@ -548,9 +574,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37843f75-3666-4266-bab1-6d6829ef9aa4",
+   "metadata": {},
+   "source": [
+    "**Methods**\n",
+    "\n",
+    "For the data analysis, we will use a subset of the available predictor variables that are likely to be informative for age prediction. These variables will be selected based on their potential relevance and significance in determining abalone age. Attributes such as shell length, diameter, and whole weight are commonly associated with age and will be considered.\n",
+    "\n",
+    "To predict the age of abalone, we will use a linear regression model. This model will be trained on the data provided in the abalone dataset using techniques like cross-validation to evaluate its performance. \n",
+    "We will create a scatterplot of the predicted age versus the actual age of the abalones to help us visualize the results. This plot will help us visually assess how accurately the model was able to predict abalone age. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70608377-9d38-4e5f-a0d9-cb8fceaec488",
+   "metadata": {},
+   "source": [
+    "**Expected Outcomes and Significance**\n",
+    "\n",
+    "We expect to be able to predict the age of abalones with a high level of accuracy, based on various physical descriptors provided by the dataset, such as shell measurements and weight. This information could potentially be very useful to improve resource management and conservation practices. This information could also help determine sustainable harvesting quotas and understand abalone population dynamics while contributing to the field of abalone biology and conservation as a whole. The regression analysis performed on this dataset could also lead to further research such as investigating the impact of various environmental factors on abalone growth rates or exploring a relationship between abalone age and meat quality.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5e01855-3c4e-4a27-8c79-dfc1d47590fa",
+   "id": "41fcbc01-9fcc-414c-9a6b-2cafb0ea35a9",
    "metadata": {},
    "outputs": [],
    "source": []
