--- a/Report.ipynb
+++ b/Report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "59f08165-967d-47a4-adba-379de83bb363",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use \u001b[32mtidymodels_prefer()\u001b[39m to resolve common conflicts.\n",
+      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
       "\n"
      ]
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4681f23d-7d66-456d-b6b4-0c448d91b60c",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "abalone <- read_csv(file = \"abalone.csv\")\n",
+    "abalone <- read_csv(\"https://raw.githubusercontent.com/miriamt3/abalone_project/main/abalone.csv\")\n",
     "\n",
     "colnames(abalone) <- make.names(colnames(abalone))\n",
     "abalone"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9fdb3872-5b4b-4081-a159-7c602b6ef74e",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dc7d0929-a7c2-4558-8c42-46d80a3e2119",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "51cde5bd-6945-4213-9729-b2fb61f3fdf0",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ad672c24-2939-4c9e-b773-fa7225273848",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "4ff1489e-abdd-4389-bd36-01fdcf3e6487",
    "metadata": {},
    "outputs": [
