--- a/Report.ipynb
+++ b/Report.ipynb
@@ -5,7 +5,7 @@
    "id": "32e6ff80",
    "metadata": {},
    "source": [
-    "**How Old is this Abalone?: Predicting the Age of Abalone Based on Physical Measurements**"
+    "## **How Old is this Abalone?: Predicting the Age of Abalone Based on Physical Measurements**"
    ]
   },
   {
@@ -61,6 +61,14 @@
     "library(tidymodels)\n",
     "library(GGally)\n",
     "options(repr.matrix.max.rows = 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7f27107-bb2e-47b3-b1b1-f1a603821c75",
+   "metadata": {},
+   "source": [
+    "## Introduction"
    ]
   },
   {
@@ -412,7 +420,7 @@
    "id": "4d4a1f68",
    "metadata": {},
    "source": [
-    "## Tidying the Data"
+    "## Methods & Results"
    ]
   },
   {
@@ -739,9 +747,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3fb1d1c-c384-4801-b864-12da7d60a619",
+   "metadata": {},
+   "source": [
+    "## Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b2beb62-106b-47bc-a982-c73a476b8639",
+   "metadata": {},
+   "source": [
+    "Discussion goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08ffa516-91fc-408c-8353-04326cac4ece",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f4cedcf",
+   "id": "8b9b4b37-9d1d-4e39-bac2-4bf186a86bfc",
    "metadata": {},
    "outputs": [],
    "source": []
