added intro paragraph

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a12f81c2-c96d-417c-aa29-b6270f371da8",
+   "metadata": {},
+   "source": [
+    "**Introduction**\n",
+    "\n",
+    "Abalone is a type of marine snail that is highly cherished for its meat and shells. Its meat is a delicacy that is among one of the most expensive seafood in the world, while its shells are best used for jewelry and decorative objects. Determining the age of abalone is crucial for sustainable harvesting and our project aims to analyze a dataset on abalone characteristics to develop a predictive model for estimating their age. By identifying key characteristics that correlate with age, we can contribute helpful information to resource management and also broaden our knowledge of abalone population dynamics. The regression-type question we will be attempting to answer is, \"Can we accurately predict the age of abalone based on their physical features?\" The dataset used for this project contains numerous physical measurements such as their length, diameter, and number of rings. It contains 9 different features (columns) and 4,177 instances (rows) of data about various abalones. The age of the abalone is determined by the rings formed inside its inner shell. However, since some rings are hard to see even under a microscope, adding 1.5 to its ring counts is traditionally accepted when measuring the age, our target variable. This dataset offers a valuable resource for evaluating the relationship between abalone characteristics and their age."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "236cebc2",
