added reasoning for predictor

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -672,7 +672,7 @@
    "source": [
     "## Reasoning for Predictors\n",
     "\n",
-    "The reason we picked whole weight, diameter, and length as our predictors is because of all predictors, these 3 showed the strongest positive relationship with our target variable, age. [Insert literacy citation] "
+    "The reason we picked whole weight, shell weight, and height as our predictors is because of all predictors, these 3 showed the strongest positive relationship with our target variable, age. From ggpairs, we can observe that all 3 predictors are higher in correlation compared to the other variables. A strong correlation often indicates a meaningful relationship between our target variable and our predictor. Additionally, variables with stronger correlation might help with predictions. In other words, as the predictor changes, often, the target variable also changes, improving the models ability to predict."
    ]
   },
   {
