added reasoning for adding 1.5 to rings and citation for it

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -415,7 +415,7 @@
     }
    ],
    "source": [
-    "set.seed(2000) #don't know if this is the right seed or if we even need one?\n",
+    "set.seed(2000) \n",
     "abalone_split <- initial_split(abalone, prop = 0.75, strata = Age)  \n",
     "abalone_train <- training(abalone_split)   \n",
     "abalone_test <- testing(abalone_split)\n",
@@ -428,7 +428,7 @@
    "id": "4d4a1f68",
    "metadata": {},
    "source": [
-    "## Methods & Results"
+    "## Wrangling Data for Predictor Selection"
    ]
   },
   {
@@ -672,7 +672,7 @@
    "source": [
     "## Reasoning for Predictors\n",
     "\n",
-    "The reason we picked whole weight, shell weight, and height as our predictors is because of all predictors, these 3 showed the strongest positive relationship with our target variable, age. From ggpairs, we can observe that all 3 predictors are higher in correlation compared to the other variables. A strong correlation often indicates a meaningful relationship between our target variable and our predictor. Additionally, variables with stronger correlation might help with predictions. In other words, as the predictor changes, often, the target variable also changes, improving the models ability to predict."
+    "The reason we picked whole weight, shell weight, and height as our predictors is because out of all the predictors, these 3 showed the strongest positive relationship with our target variable, age. From the ggpairs plots, we can observe that all 3 predictors are higher in correlation compared to the other variables. A strong correlation often indicates a meaningful relationship between our target variable and our predictor. Additionally, variables with stronger correlation might help with predictions. In other words, as the predictor changes, often, the target variable also changes, improving the models ability to predict. Since the original dataset did not have an age column, we mutated the dataset to create a new age column by adding a value of 1.5 to each value in the \"Rings\" columns. This is a widely accepted method of approximating an abalone's age (Hossain & Chowdhury, 2019) as some rings of the shell are not easily visible, even under a microscope."
    ]
   },
   {
@@ -779,9 +779,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b14b4b8a-b4ad-47fd-b7cb-15054604d8cb",
+   "metadata": {},
+   "source": [
+    "Hossain, M. M., & Chowdhury, M. N. (2019, January). *Econometric Ways to Estimate the Age and Price of Abalone*.  &emsp;  &emsp;  &emsp;  &emsp; &emsp; &emsp;  &emsp;  &emsp;  &emsp; (MPRA Paper No. 91210). https://mpra.ub.uni-muenchen.de/91210/1/MPRA_paper_91210.pdf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9b4b37-9d1d-4e39-bac2-4bf186a86bfc",
+   "id": "1168482b-d643-417d-bc0f-06f59b0336da",
    "metadata": {},
    "outputs": [],
    "source": []
