--- a/Report.ipynb
+++ b/Report.ipynb
@@ -917,10 +917,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3fb1d1c-c384-4801-b864-12da7d60a619",
-   "metadata": {},
+   "id": "71e27250-2ac3-4f35-972b-a44153524141",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Discussion"
+    "## Methods"
    ]
   },
   {
@@ -928,7 +930,52 @@
    "id": "6b2beb62-106b-47bc-a982-c73a476b8639",
    "metadata": {},
    "source": [
-    "Discussion goes here"
+    "To perform our analysis, we used KNN regression. We chose this because we worried that the relationship between the predictors and the target variable, age, would not be linear. As well, the height, whole weight, and shell weight all have similar characteristics for each age. Thus, since these abalone have localized patterns, KNN regression is well suited for this problem.\n",
+    "To begin with our analysis, we first split our data into training and testing data, helping us perform our final RMSPE evaluation. We then created a recipe with the target variable, age, and all our predictors, height, whole weight, and shell weight. In addition, we scaled and centered the data so that we avoid biased impacts from any of our predictors.\n",
+    "As well, it is essential that we choose the best K (number of neighbors) for our dataset. This is because a K that is too small makes the model too sensitive while a K that is too big may ignore useful data. In this process, we used k-fold-cross-validation (10 folds)  and tuning for our model. This splits our data into multiple folds, trains the model on subsets of that data, and finally, evaluates the performance on the remaining fold. From the metrics we collected for each k, we filtered for RMSE value, arranged by mean, and then sliced the 1st row for the best K value, which was determined to be 54. \n",
+    "Using this new K value, we retrained our model using the engine “kknn” and the mode “regression”. After creating the workflow and fitting the data, we were able to calculate the RMSPE of our model by evaluating our testing data. With the predict() function, we obtained a prediction for each observation and by using metrics(), we were able to obtain our RMSPE of 2.39.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3fb1d1c-c384-4801-b864-12da7d60a619",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0b22332-a2ed-45b7-87e4-0a6d4e7e1e2b",
+   "metadata": {},
+   "source": [
+    "Ultimately, we found that our model was able to predict the age of the abalones based on the three predictors (whole weight, diameter, and length) with an error of about 2.39 years. We expected our model to be a good predictor of the actual abalone age, and this was what we found because our RMSPE value of about 2.39 means that our model is able to predict the actual age of abalone with an error of about ∓2.39 years. Although we are used to a “good” RMSPE value of less than 1 from our in-class worksheets, when we put our project’s RMSPE value into perspective, and considering the abalone age values in our dataset range up to 30 years of age, we can see that it is actually quite good. For instance, if an abalone were 20 years old, then our model could predict its age to be anywhere from about 18 to 22 years old. Being able to predict the age of anything within 2 years of its actual age is a rather significant feat in terms of accuracy, thus overall our model was a success.\n",
+    "We also chose the three predictive variables due to their high correlation value when regressed against the age variable using the ggpair() function. We then have additional graphs depicting each predictor variable against our target variable to better see the line of best fit. From the graph, we used imperial units of lbs and feet, similar to the original data.\n",
+    "Our findings are potentially quite impactful, particularly for the fields of conservation and marine management. With the use of easily measurable variables to determine the age of abalone, this could be utilized to measure and monitor the growth and health of abalone populations. It could also contribute to the improvement and increased sustainability of aquaculture. By utilizing easily determinable characteristics of abalone, farmers could determine optimal harvesting length for more sustainable and environmentally friendly harvesting.\n",
+    "There are countless areas and questions for further study, for example, examining how the age of abalone varies across different geographical habitats. The impacts of pollution on the growth and age of abalone could be a promising area of future study as well. \n",
+    "\n",
+    "\n",
+    "Summarize what you found!\n",
+    "\n",
+    "Ultimately, we found that our model was able to predict the age of the abalones based on the three predictors (whole weight, diameter, and length) to an accuracy of about 2.39 years. Considering the abalone age values in our dataset range up to 30 years of age, this is relatively accurate. \n",
+    "Discuss whether this is what you expected to find?\n",
+    "Yes, this was what we expected to find because our RMSPE value of about 2.39 means that our model is able to predict the actual age of abalone with an error of about ∓2.39 years. Although we are used to a “good” RMSPE value of less than 1 from our in-class worksheets, when we put our project’s RMSPE value into perspective we can see that it is actually quite good. For instance, if an abalone were 20 years old, then our model could predict its age to be anywhere from about 18 to 22 years old. Being able to predict the age of anything within 2 years of its actual age is a rather significant feat in terms of accuracy, thus overall our model was a success.\n",
+    "\n",
+    "Discuss what impact could such findings have? <br>\n",
+    "*Conservation and Marine Management*<br>\n",
+    "The result of this regression analysis project plays an important role in the conservation and management efforts related to abalone populations. By being able to determine the relationship between abalone’s age and easily measurable variables such as weight, diameter, and length, it becomes possible to assess the growth and health of abalone populations more effectively. Conservationists and marine managers can utilize this as indicator to monitor and evaluate the status of abalone populations, identify growth rates, and implement conservation measures. This knowledge contributes to the sustainable management and conservation of abalone, promoting these important marine species' long-term health. <br>\n",
+    "*Similar Studies on Different Species*<br>\n",
+    "The methodology and approach used in this research can serve as a template for conducting similar studies on different shellfish species. By examining the relationships between age and easily measurable physical characteristics, researchers can learn about various shellfish species' growth patterns and history traits. Understanding these relationships across different species can provide more understanding of growth and contribute to the conservation and management of other economically and ecologically important shellfish populations.<br>\n",
+    "*Improvement of Abalone Aquaculture*<br>\n",
+    "The findings of this regression analysis project are important for the improvement of abalone aquaculture practices. By using easily determinable characteristics such as weight, diameter, and length, abalone farmers can estimate the age of individual abalone more accurately. This information can be used to determine optimal harvesting age and season, ensuring that abalone is harvested at the appropriate stage of growth for maximum yield and quality. This will in turn increase the efficiency and profitability of abalone farming operations.\n",
+    "\n",
+    "Discuss what future questions could this lead to?\n",
+    "- How does the age of abalone vary across different geographical habitats?\n",
+    "- What impact does pollution have on the growth and age of abalone?\n",
+    "- At what age should abalone be optimally harvested based on its size and weight?\n"
    ]
   },
   {
@@ -945,6 +992,14 @@
    "metadata": {},
    "source": [
     "Hossain, M. M., & Chowdhury, M. N. (2019, January). *Econometric Ways to Estimate the Age and Price of Abalone*.  &emsp;  &emsp;  &emsp;  &emsp; &emsp; &emsp;  &emsp;  &emsp;  &emsp; (MPRA Paper No. 91210). https://mpra.ub.uni-muenchen.de/91210/1/MPRA_paper_91210.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "297d8054-1513-4fcd-ba6c-e12b904b4c96",
+   "metadata": {},
+   "source": [
+    "Indumathi, H. (2021, February 25). Abalone Age Prediction. Medium. Retrieved June 23, 2023, from https://harshithaindumathi.medium.com/abalone-age-prediction-607ecda3fa3b\n"
    ]
   },
   {
