edited format of reference

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -999,7 +999,7 @@
    "id": "297d8054-1513-4fcd-ba6c-e12b904b4c96",
    "metadata": {},
    "source": [
-    "Indumathi, H. (2021, February 25). Abalone Age Prediction. Medium. Retrieved June 23, 2023, from https://harshithaindumathi.medium.com/abalone-age-prediction-607ecda3fa3b\n"
+    "Indumathi, H. (2021, February 25). *Abalone Age Prediction*. Medium. &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; https://harshithaindumathi.medium.com/abalone-age-prediction-607ecda3fa3b\n"
    ]
   },
   {
