formatting of discussion

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -958,21 +958,25 @@
     "There are countless areas and questions for further study, for example, examining how the age of abalone varies across different geographical habitats. The impacts of pollution on the growth and age of abalone could be a promising area of future study as well. \n",
     "\n",
     "\n",
-    "Summarize what you found!\n",
+    "**Summarizing what we found**\n",
     "\n",
-    "Ultimately, we found that our model was able to predict the age of the abalones based on the three predictors (whole weight, diameter, and length) to an accuracy of about 2.39 years. Considering the abalone age values in our dataset range up to 30 years of age, this is relatively accurate. \n",
-    "Discuss whether this is what you expected to find?\n",
-    "Yes, this was what we expected to find because our RMSPE value of about 2.39 means that our model is able to predict the actual age of abalone with an error of about ∓2.39 years. Although we are used to a “good” RMSPE value of less than 1 from our in-class worksheets, when we put our project’s RMSPE value into perspective we can see that it is actually quite good. For instance, if an abalone were 20 years old, then our model could predict its age to be anywhere from about 18 to 22 years old. Being able to predict the age of anything within 2 years of its actual age is a rather significant feat in terms of accuracy, thus overall our model was a success.\n",
+    "Ultimately, we found that our model was able to predict the age of the abalones based on the three predictors (whole weight, diameter, and length) to an accuracy of about 2.39 years. Considering the abalone age values in our dataset range up to 30 years of age, this is relatively accurate. This was what we expected to find because our RMSPE value of about 2.39 means that our model is able to predict the actual age of abalone with an error of about ∓2.39 years. Although we are used to a “good” RMSPE value of less than 1 from our in-class worksheets, when we put our project’s RMSPE value into perspective we can see that it is actually quite good. For instance, if an abalone were 20 years old, then our model could predict its age to be anywhere from about 18 to 22 years old. Being able to predict the age of anything within 2 years of its actual age is a rather significant feat in terms of accuracy, thus overall our model was a success.\n",
     "\n",
-    "Discuss what impact could such findings have? <br>\n",
-    "*Conservation and Marine Management*<br>\n",
-    "The result of this regression analysis project plays an important role in the conservation and management efforts related to abalone populations. By being able to determine the relationship between abalone’s age and easily measurable variables such as weight, diameter, and length, it becomes possible to assess the growth and health of abalone populations more effectively. Conservationists and marine managers can utilize this as indicator to monitor and evaluate the status of abalone populations, identify growth rates, and implement conservation measures. This knowledge contributes to the sustainable management and conservation of abalone, promoting these important marine species' long-term health. <br>\n",
-    "*Similar Studies on Different Species*<br>\n",
-    "The methodology and approach used in this research can serve as a template for conducting similar studies on different shellfish species. By examining the relationships between age and easily measurable physical characteristics, researchers can learn about various shellfish species' growth patterns and history traits. Understanding these relationships across different species can provide more understanding of growth and contribute to the conservation and management of other economically and ecologically important shellfish populations.<br>\n",
-    "*Improvement of Abalone Aquaculture*<br>\n",
+    "**Discussing what impact our findings could have**\n",
+    "\n",
+    "*Conservation and Marine Management*\n",
+    "\n",
+    "The result of this regression analysis project plays an important role in the conservation and management efforts related to abalone populations. By being able to determine the relationship between abalone’s age and easily measurable variables such as weight, diameter, and length, it becomes possible to assess the growth and health of abalone populations more effectively. Conservationists and marine managers can utilize this as indicator to monitor and evaluate the status of abalone populations, identify growth rates, and implement conservation measures. This knowledge contributes to the sustainable management and conservation of abalone, promoting these important marine species' long-term health. \n",
+    "\n",
+    "*Similar Studies on Different Species*\n",
+    "\n",
+    "The methodology and approach used in this research can serve as a template for conducting similar studies on different shellfish species. By examining the relationships between age and easily measurable physical characteristics, researchers can learn about various shellfish species' growth patterns and history traits. Understanding these relationships across different species can provide more understanding of growth and contribute to the conservation and management of other economically and ecologically important shellfish populations.\n",
+    "\n",
+    "*Improvement of Abalone Aquaculture*\n",
+    "\n",
     "The findings of this regression analysis project are important for the improvement of abalone aquaculture practices. By using easily determinable characteristics such as weight, diameter, and length, abalone farmers can estimate the age of individual abalone more accurately. This information can be used to determine optimal harvesting age and season, ensuring that abalone is harvested at the appropriate stage of growth for maximum yield and quality. This will in turn increase the efficiency and profitability of abalone farming operations.\n",
     "\n",
-    "Discuss what future questions could this lead to?\n",
+    "**Discussing what future questions this could lead to**\n",
     "- How does the age of abalone vary across different geographical habitats?\n",
     "- What impact does pollution have on the growth and age of abalone?\n",
     "- At what age should abalone be optimally harvested based on its size and weight?\n"
