removed commented code

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -45,7 +45,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
       "\n",
       "Registered S3 method overwritten by 'GGally':\n",
       "  method from   \n",
@@ -621,12 +621,6 @@
     "\n",
     "summarized_plot_2\n",
     "\n",
-    "# summarized_plot_3 <- summarized_abalone_train |>\n",
-    "#     ggplot(aes(x = Mean_Rings))+\n",
-    "#     geom_histogram(binwidth = 5, colour = \"white\", fill = \"blue\") +\n",
-    "#     labs(x = \"Mean Rings of Abalone\", y = \"Frequency\", title = \"Frequency of Mean Ring Values\")\n",
-    "# summarized_plot_3\n",
-    "\n",
     "summarized_plot_4 <- summarized_abalone_train |>\n",
     "    ggplot(aes(x = Mean_Length, y = Age))+\n",
     "    geom_point() +\n",
@@ -689,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "c080c91e",
    "metadata": {},
    "outputs": [
@@ -760,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "10e9ee7a-192e-4946-87c6-a271bfc1233c",
    "metadata": {},
    "outputs": [
